--- a/config/hypr/config/appearance.conf
+++ b/config/hypr/config/appearance.conf
@@ -4,9 +4,9 @@
 
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
-layerrule = blur, waybar
-layerrule = ignorezero, waybar
-layerrule = ignorealpha 0.7, waybar
+# layerrule = blur, waybar
+# layerrule = ignorezero, waybar
+# layerrule = ignorealpha 0.7, waybar
 layerrule = blur, notifications
 layerrule = ignorezero, notifications
 layerrule = ignorealpha 0.5, notifications
@@ -39,21 +39,21 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.95
+    inactive_opacity = 0.97
 
     shadow {
         enabled = true
-        range = 5
-        render_power = 2
+        range = 3
+        render_power = 1
         color = rgba(1a1a1aee)
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 10
-        passes = 3
-        vibrancy = 0.7
+        size = 8
+        passes = 2
+        vibrancy = 0.3
         new_optimizations = true
     }
 }
@@ -70,7 +70,7 @@ animations {
     bezier = almostLinear,0.5,0.5,0.75,1.0
     bezier = quick,0.15,0,0.1,1
 
-    animation = global, 1, 10, default
+    animation = global, 1, 8, default
     animation = border, 1, 5.39, easeOutQuint
     animation = windows, 1, 4.79, easeOutQuint
     animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
@@ -104,5 +104,6 @@ misc {
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
     disable_hyprland_logo = true
     disable_splash_rendering = true
+    # Variable Frame Rate: reduces idle CPU/GPU usage when nothing changes on screen.
+    vfr = true
 }
-
