--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -9,12 +9,14 @@
 # exec-once = hyprpanel
 exec-once = dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE XDG_CURRENT_DESKTOP
+exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
 exec-once = systemctl --user restart kanshi.service
 exec-once = ~/.config/hypr/scripts/check-lid-state.sh
+exec-once = ~/.config/waybar/scripts/launch-waybar.sh
+exec-once = ~/.config/hypr/scripts/hotplug-waybar.sh
 exec-once = hyprpaper
 exec-once = mako
 exec-once = blueman-applet
 # exec-once = nm-applet
 exec-once = hypridle
 exec-once = wl-paste --watch cliphist store
-
