--- a/config/hypr/config/env.conf
+++ b/config/hypr/config/env.conf
@@ -25,6 +25,7 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = GDK_SCALE,1.25
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = GTK_CSD,0
 
 
 xwayland{
