--- a/config/hypr/hypridle.conf
+++ b/config/hypr/hypridle.conf
@@ -1,6 +1,6 @@
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
-    before_sleep_cmd = loginctl lock-session    # lock before suspend.
+    lock_cmd = playerctl -a pause; pidof hyprlock || ~/.config/hypr/scripts/hyprlock-dynamic.sh       # pause audio and avoid starting multiple hyprlock instances.
+    before_sleep_cmd = playerctl -a pause; loginctl lock-session    # pause audio and lock before suspend.
     after_sleep_cmd = ~/.config/hypr/scripts/wake-from-suspend.sh
 }
 
