Use standard hyprlock instead of dynamic script

--- a/config/hypr/hypridle.conf
+++ b/config/hypr/hypridle.conf
@@ -1,5 +1,5 @@
 general {
-    lock_cmd = playerctl -a pause; pidof hyprlock || ~/.config/hypr/scripts/hyprlock-dynamic.sh       # pause audio and avoid starting multiple hyprlock instances.
+    lock_cmd = playerctl -a pause; pidof hyprlock || hyprlock       # pause audio and avoid starting multiple hyprlock instances.
     before_sleep_cmd = playerctl -a pause; loginctl lock-session    # pause audio and lock before suspend.
     after_sleep_cmd = ~/.config/hypr/scripts/wake-from-suspend.sh
 }
