--- a/config/hypr/config/keybinds.conf
+++ b/config/hypr/config/keybinds.conf
@@ -23,7 +23,7 @@ bind = $mainMod SHIFT, W, exec, waypaper
 bind = $mainMod SHIFT, V, exec, ~/.config/rofi/clipboard/clipboard.sh
 bind = $mainMod SHIFT, E, exec, ~/.config/rofi/emoji/emoji.sh
 bind = $mainMod SHIFT, U, exec, kitty --class floating-updates --title "Update Center" -e ~/.config/hypr/scripts/update-center.sh
-bind = $mainMod, Escape, exec, playerctl -a pause; ~/.config/hypr/scripts/hyprlock-dynamic.sh
+bind = $mainMod, Escape, exec, playerctl -a pause; hyprlock
 bind = $mainMod, Tab, exec, ~/.config/rofi/window/window.sh
 bind = $mainMod, Z, exec, flatpak run app.zen_browser.zen 
 # Move focus with mainMod + vim keys
