--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/wallpapers/trees.png
+preload = /home/abdelrahman/wallpapers/1-everforest.jpg
 
-wallpaper = ,~/wallpapers/trees.png
+wallpaper = ,/home/abdelrahman/wallpapers/1-everforest.jpg
